# ChangeLog for app-emulation/kvm-kmod
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/kvm-kmod/ChangeLog,v 1.17 2010/11/17 16:08:05 cardoe Exp $

*kvm-kmod-2.6.36 (17 Nov 2010)
*kvm-kmod-2.6.35.6 (17 Nov 2010)

  17 Nov 2010; Doug Goldstein <cardoe@gentoo.org>
  -kvm-kmod-2.6.32.16.ebuild, +kvm-kmod-2.6.35.6.ebuild,
  +kvm-kmod-2.6.36.ebuild:
  version bumps and clean out old version

  21 Sep 2010; Doug Goldstein <cardoe@gentoo.org> kvm-kmod-2.6.32.16.ebuild,
  kvm-kmod-2.6.32.17.ebuild, kvm-kmod-2.6.34.1.ebuild,
  kvm-kmod-2.6.35.ebuild:
  Yet another eclass change... s/linux-chkconfig_exists/linux_config_exists/

*kvm-kmod-2.6.32.17 (25 Aug 2010)

  25 Aug 2010; Doug Goldstein <cardoe@gentoo.org>
  +kvm-kmod-2.6.32.17.ebuild:
  version bump

  25 Aug 2010; Doug Goldstein <cardoe@gentoo.org>
  -kvm-kmod-2.6.32.12.ebuild, kvm-kmod-2.6.32.16.ebuild,
  -kvm-kmod-2.6.33.3.ebuild, -kvm-kmod-2.6.34.ebuild,
  kvm-kmod-2.6.34.1.ebuild, kvm-kmod-2.6.35.ebuild:
  Fix QA warning about linux_chkconfig_exists and remove older versions.

*kvm-kmod-2.6.35 (20 Aug 2010)

  20 Aug 2010; Doug Goldstein <cardoe@gentoo.org> +kvm-kmod-2.6.35.ebuild:
  version bump

*kvm-kmod-2.6.34.1 (07 Jul 2010)
*kvm-kmod-2.6.32.16 (07 Jul 2010)

  07 Jul 2010; Doug Goldstein <cardoe@gentoo.org> -kvm-kmod-2.6.32.7.ebuild,
  +kvm-kmod-2.6.32.16.ebuild, +kvm-kmod-2.6.34.1.ebuild:
  Bump for upstream bug fixes

*kvm-kmod-2.6.34 (26 May 2010)

  26 May 2010; Doug Goldstein <cardoe@gentoo.org> +kvm-kmod-2.6.34.ebuild:
  latest upstream version bump

*kvm-kmod-2.6.33.3 (29 Apr 2010)
*kvm-kmod-2.6.32.12 (29 Apr 2010)

  29 Apr 2010; Doug Goldstein <cardoe@gentoo.org>
  +kvm-kmod-2.6.32.12.ebuild, +kvm-kmod-2.6.33.3.ebuild:
  bump versions to the latest versions. The goal is going to be to stabilize
  the 2.6.32.x series while maintaining 2.6.3x at the cutting edge to test