@@ -1,12 +1,10 @@
 DIST kvm-kmod-2.6.32.17.tar.bz2 279648 RMD160 003030c6b5facf60e6d891048cfa974bf2b20e15 SHA1 65ae0661b41e66f548af765006137a389b8c7301 SHA256 ccb5296dd39b70c95052d770a9b3c5bfa99340ca1838e92774dc62bfc376d945
 DIST kvm-kmod-2.6.34.1.tar.bz2 292724 RMD160 4e4ad07edcc625f1dc7c3cc1f220079ebea95233 SHA1 54b962ae9dc51ffad55dd4a99398fcc9af1da440 SHA256 397acf713c15123465611f0230bc31aea7ad984f6c308a1224e77ad38b542325
 DIST kvm-kmod-2.6.35.6.tar.bz2 303766 RMD160 afc3255b6089e320df36d1e7233b2f43e1d361a4 SHA1 b8e660c8847f822ef1deed1bb070942223a2c849 SHA256 6178daa1fba96bbfa6a866939a7b3239b8e3b4965f0a8f4b456bf443bc13e28a
-DIST kvm-kmod-2.6.35.tar.bz2 299000 RMD160 1fca3700933d2ccfc164a4627b3df9d0411cce80 SHA1 3e9222784265783e56ff14b430c77e9e28880926 SHA256 d042626a02fda240d8c804d115d923984fd0ea63ccf36ee293e7a9b8bb117620
 DIST kvm-kmod-2.6.36.tar.bz2 308503 RMD160 2e59f8ff9de24c9f97d7dc3e94d449937bb61084 SHA1 78f584d2fd5a4c7f91e42f0004f85ee361384a16 SHA256 4a52793c4c0e77aa47be0455fe524d08bd9eb41907a14b3cba53295f1b05b6b4
-EBUILD kvm-kmod-2.6.32.17.ebuild 1676 RMD160 bc5dbf1cfe83ba07b277d3c0b97b2d006e11feff SHA1 a11994c395dcbc96515d2e6e9bd13210fde7f9a8 SHA256 b634841cf18fc2d367afc38d5635f872d32c3939d59f2fdda80c9f01423ee1b3
-EBUILD kvm-kmod-2.6.34.1.ebuild 1675 RMD160 4b0aff313d154e81eb7b34e9003f00793946cb38 SHA1 a6a3bdf48887e6244dd5346f3838949d8bd4ca6c SHA256 b88f30c33179dcddcfedc42c45034f083de18ea00b5f9cc193ce493f2be64ee6
-EBUILD kvm-kmod-2.6.35.6.ebuild 1675 RMD160 cd65273c6e5946c5fa9ed74cf071b48fb81b1fc4 SHA1 2493b658774fd6d6041946827bdf4fcbe385d44a SHA256 64950d51008b18cbdd0e5a7eb1589979cfeccdaf31346d1dfe0b443a68669aed
-EBUILD kvm-kmod-2.6.35.ebuild 1673 RMD160 3138b05c497104b94c5a1b6767daeee66f727599 SHA1 8714a5346c3bd436c602e5159778b517cbf92d79 SHA256 da79fca08dcad3db34dca51ad662780c19d16d9c4ac049d3f9fd14de1e6cab65
-EBUILD kvm-kmod-2.6.36.ebuild 1673 RMD160 84b973a497164a6a22ea9eabc4ff50308b01b5be SHA1 5a31f0b169e39b80ca0e073b3c83032a8e325758 SHA256 b40236cbca663bc89aa8d0665d6aa8d338608121cb4791d3087b033fea2e6e0b
-MISC ChangeLog 3537 RMD160 32ed8fd9ae284dff658f500303fbdf9299caf918 SHA1 b631f9f25345bf0d4392831b1a14db43328c3dd6 SHA256 dbb05fbeb4d6ddd12ca74637ba3e4c215c6de34b0413e9fc5ae6e458ea598fec
+EBUILD kvm-kmod-2.6.32.17.ebuild 1698 RMD160 0fad649b4f2c41f8421d536e35a424993eaaaf93 SHA1 55741f0f4679cf7ecbf33d8a31a7449f6ee6e59a SHA256 5e8a432f59a2fc37a18b83095e1f3ce817e1b36ca4ffdffbaf2690fd497a6f49
+EBUILD kvm-kmod-2.6.34.1.ebuild 1697 RMD160 5ed5e4cfb1ac051f8b309e497579ade781f11f41 SHA1 2c2986ab954fa688a3df333464728b403a617c19 SHA256 93bbb846baa2c5b63fc93a3bca766ba0b6f495a968b0f978ae649e8de51dd771
+EBUILD kvm-kmod-2.6.35.6.ebuild 1697 RMD160 910c697ea1914f4ff0ced9f41c3b67df1c87f7f7 SHA1 286426543d0f178ddd1c8065bc79789e047b1052 SHA256 2ed51c190d59cd8c8aca8fb7b5b2a09dc2a892e5bcf4d6f08397acd440a8ce44
+EBUILD kvm-kmod-2.6.36.ebuild 1695 RMD160 9cc6afc82c8ad00f510d5fac0a0d12cad9af1630 SHA1 a05146bceb7d7f029941a41cefe9c0d81fcca945 SHA256 f8436193c68afc8a04c2edbc2818e35a0d50eb2534bb7f699cec5f73e44f7f32
+MISC ChangeLog 3817 RMD160 6403a872617836604dea7342434896872b43d132 SHA1 9b1eba8b7a3f068e550ecc8b39bb6f08f1dcd4da SHA256 1e01e60577e8a3bc81c96f2799cf6aae611b197925204d302f33d7878766b154
 MISC metadata.xml 512 RMD160 4532b7bf47ac6f68e996616f4b2346da780f9785 SHA1 9b8cb95d6eebe3f1a1486c0952ca7eefd56e6e3b SHA256 2cfef7df1c5fed551003a189f27badfa45dc60456976d4407b77c73df98adafc
