@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/kvm-kmod
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/kvm-kmod/ChangeLog,v 1.17 2010/11/17 16:08:05 cardoe Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/kvm-kmod/ChangeLog,v 1.18 2011/01/04 18:03:45 cardoe Exp $
+
+  04 Jan 2011; Doug Goldstein <cardoe@gentoo.org> kvm-kmod-2.6.32.17.ebuild,
+  kvm-kmod-2.6.34.1.ebuild, -kvm-kmod-2.6.35.ebuild, kvm-kmod-2.6.35.6.ebuild,
+  kvm-kmod-2.6.36.ebuild:
+  Fix issue where linux-mod_pkg_setup was not called early enough. Get rid of
+  an older version
 
 *kvm-kmod-2.6.36 (17 Nov 2010)
 *kvm-kmod-2.6.35.6 (17 Nov 2010)
